Port to Fabric on Minecraft 26.1.2 and add tree regen timer
Hypixel now enforces a rolling version window on SkyBlock (since 2026-02-24
only the two most recent content updates are allowed), so the previous
Forge 1.8.9 target is unusable there. Retarget to Fabric on 26.1.2.

Toolchain changes for 26.1 (first unobfuscated Minecraft release):
- net.fabricmc.fabric-loom 1.15, no mappings line, no remap step
- implementation instead of modImplementation, jar instead of remapJar
- Java 25 toolchain, Fabric Loader 0.19.3, Fabric API 0.155.2+26.1.2
- fabric.mod.json replaces mcmod.info; Forge config replaced with JSON

Feature changes:
- Add self-calibrating tree regeneration timer: watches birch block
  positions, measures real regrowth duration and counts down from the
  learned average rather than a hardcoded constant
- Fix birch/hour detection: pickup events are server-authoritative and
  never fire client-side on Hypixel, so sample inventory deltas instead
- Rewrite HUD for the 26.1 render-state pipeline (HudElementRegistry /
  HudElement.extractRenderState); HudRenderCallback was removed
- Switch HttpUtil to java.net.http.HttpClient

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Nui97Vd7TLbbxveHE7fig9